@@ -331,6 +331,12 @@ create_phased_record()
             if (!is_genotype_represented(si->smod.max_gt, unsigned(si->pos - _buffer[0]->pos),
                     max_alleles[0].first, max_alleles[1].first))
             {
+#ifdef DEBUG_CODON
+                log_os << "Variant at offset i lacks support in phased alleles - failing phasing\n"
+#endif
+                // TODO: This is a blunt instrument. Refine this solution to select the minimum set of
+                // ALTs that support the buffered variants
+                phasing_inconsistent = true;
                 continue;
             }
 
